--- a/Lonelysg/app/src/main/res/layout/activity_chat_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_chat_ui.xml
@@ -64,7 +64,7 @@
                     android:layout_marginBottom="20dp"
                     android:background="@drawable/borders3"
                     android:drawableRight="@drawable/cancel_icon"
-                    android:paddingRight="29dp"
+                    android:paddingRight="30dp"
                     android:text="BACK "
                     android:textAlignment="textEnd"
                     android:textColor="@color/white"
@@ -73,9 +73,10 @@
                 <ImageButton
                     android:id="@+id/refreshButton"
                     android:layout_width="35dp"
-                    android:layout_height="23dp"
+                    android:layout_height="35dp"
                     android:layout_marginTop="15dp"
                     android:layout_marginEnd="15dp"
+                    android:layout_weight="0.1"
                     android:background="@color/backgroundcolor"
                     android:scaleType="fitCenter"
                     android:src="@drawable/refresh" />
