--- a/Lonelysg/app/src/main/res/layout/activity_individual_chat_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_individual_chat_ui.xml
@@ -20,6 +20,7 @@
                 android:id="@+id/backButton"
                 android:layout_width="140dp"
                 android:layout_height="35dp"
+                android:layout_weight="0.1"
                 android:layout_marginStart="15dp"
                 android:layout_marginLeft="130dp"
                 android:layout_marginTop="15dp"
@@ -27,7 +28,7 @@
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/borders3"
                 android:drawableRight="@drawable/cancel_icon"
-                android:paddingRight="29dp"
+                android:paddingRight="35dp"
                 android:text="BACK "
                 android:textAlignment="textEnd"
                 android:textColor="@color/white"
@@ -37,6 +38,7 @@
                 android:id="@+id/receiverName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.8"
                 android:layout_marginStart="15dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="15dp"
@@ -49,7 +51,8 @@
             <ImageButton
                 android:id="@+id/refreshButton"
                 android:layout_width="35dp"
-                android:layout_height="23dp"
+                android:layout_height="35dp"
+                android:layout_weight="0.1"
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="15dp"
                 android:background="@color/backgroundcolor"
